# CS442_Final_Project

./: .gitignore  README.md  gol.hpp
gol_implementation/: CMakeLists.txt  graphing.py
gol_implementation/gol_mpi/: CMakeLists.txt  gol_mpi.cpp  gol_shared.cpp  run_1.sh  run_16.sh  run_4.sh  run_64.sh  run_9.sh  run_readin.sh  run_shared.sh  test.cpp
gol_implementation/gol_serial/: CMakeLists.txt  gol_serial.cpp  main.cpp
gol_implementation/golly_readin/: CMakeLists.txt  readin.cpp
gol_implementation/golly_readin/tests/: CMakeLists.txt  test.pat  test_golly_readin.cpp
gol_implementation/patterns/: cool.pat
gol_implementation/utils/: CMakeLists.txt  utils.cpp  utils.hpp
renderer/: CMakeLists.txt  example.mat  make_example_mat.cpp  make_mat.txt  other.mat  render_mat.txt  renderer.cpp  shrek.mat
src/: gol.hpp  gol_serial.cpp  main.cpp  utils.cpp  utils.hpp
src/readin/: a.out  main.cpp  readin.hpp
